--- a/2_about.html
+++ b/2_about.html
@@ -2,62 +2,71 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title class="hidden"></title>
+<title class="hidden">Apeiron - About</title>
 <link rel="stylesheet" href="https://use.typekit.net/zwq2ock.css">
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <!--header start -->
 <body>
-    <h1 class="hidden"></h1>
+    <h1 class="hidden">About</h1>
     <a class="hidden" href="#content">Skip to content</a>
     <header>
       <nav id="head">
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi"><a href="1_index.html"><h3>Index</h3></a></li>
-          <li class="mainNavi"><a href="#"><h3>About</h3></a></li>
-          <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
-          <li class="mainNavi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
-          <div id="headSocial">
-            <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-            <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-            <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
-          </div>
-          <li class="hidden"><a href="#"><img src="" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
+          <li class="mainNavi disNone"><a href="1_index.html"><h3>Home</h3></a></li>
+          <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
+          <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
+          <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
+          <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
+        </ul>
+        <ul id="headSocial">
+          <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+          <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+          <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
         </ul>
       </nav>
     </header>
     <!-- header end -->
 
     <!-- hero start -->
-    <div id="homeImg"><img src=""></div>
+    <div id="heroImg">
+      <video autoplay muted loop>
+        <source src="assets/apeiron_promo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+    </div>
     <!-- hero end -->
+    
     <div id="contents">
       <!--section 1 start -->
       <section id="introTeam">
-        <h2>Meet the team</h2>
+        <div class="textCenter">
+          <h2>Apeiron</h2>
+          <p class="agencyIntro">Apeiron Inc. is an advertising agency founded in 2022 and baed in London, Ontario. Apeiron specializes in making the unknown known by working with unrecognized talent in eccentric and often overlooked disciplines. We show the world what the brilliant minds of tomorrow are up to today. Have a great idea you can't get off the ground? A niche product that you can't find your demographic for? We'll help you reach those who need to hear you the most. Join Apeiron and reach beyond the stars.</p>
+        </div>
         <div id="teamMembers">
           <div class="membersIntro">
-            <img src="">
-            <h3>Evan Hansen</h3>
+            <img src="images/evan.jpg" alt="A photo of Evan">
+            <h3>Evan Hansen <span class="deco"><h4><b>Chief Director</b></h4></span></h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
-            <img src="">
-            <h3>Doyeon Kim</h3>
+            <img src="images/doyeon.jpg" alt="A photo of Doyeon">
+            <h3>Doyeon Kim <span class="deco"><h4><b>Digital Director</b></h4></span></h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
-            <img src="">
-            <h3>Carson Fitzgeorge</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <img src="images/carson.jpg" alt="A photo of Carson">
+            <h3>Carson Fitzgeorge <span class="deco"><h4><b></b></h4></span></h3>
+            <p>Carson Fitzgeorge is a 2D Graphics Artist and Wireframe Developer at Apeiron and excels when working with clients in need of website wireframes.</p>
           </div>
           <div class="membersIntro">
-            <img src="">
-            <h3>Abram Kouwen</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <img src="images/abram.jpg" alt="A photo of Abram">
+            <h3>Abram Kouwen <span class="deco"><h4><b>Motion Graphics Designer</b></h4></span></h3>
+            <p>Abram Kouwen is a Motion Graphics Designer with years of experience working in the promotional and videography field. From helping people plan how to convey their message to executing the graphic and cinematic videography work, he does it start to finish. Abram is a team member that is always up for a challange, and aspires to promote your idea the best he can. </p>
           </div>
         </div>
       </section>
@@ -83,7 +92,6 @@
    </footer>
    <!-- footer end -->
 
-  <script src=""></script>
+   <script src="js/main.js"></script>
   </body>
   </html>
-
